--- a/main/@connect/assets/style-0.css
+++ b/main/@connect/assets/style-0.css
@@ -6604,7 +6604,8 @@ button.audience.connecting:before {
     max-width: 375px;
     margin: 18px auto 0;
     -webkit-mask-image: linear-gradient(to right, transparent 0%, white 10%, white 90%, transparent 100%);
-    mask-image: linear-gradient(to right, transparent 0%, white 10%, white 90%, transparent 100%)
+    mask-image: linear-gradient(to right, transparent 0%, white 10%, white 90%, transparent 100%);
+    display: none
 }
 
 .slide[data-v-1a297816] {
